--- a/playbook.yml
+++ b/playbook.yml
@@ -1,22 +1,24 @@
 ---
-- become: true
-  host: fiapServerAws
+- host: fiapServerAws
+  become: True
   task:
-  - name: Instalanado o java
-    apt: name ={{ item }} state=present
-    with_items:
-    - openjdk-8-jdk -y
-    - openjdk-8-jre -y
-    - nginx
-    - clean all
-  - name: Start nginx server
-    service:
-    - name: nginx
-    - state: start
-  - name: Configure nginx
-    bar:
-    - server_name ansible
-    - listen 8089
-    - location /
-    - root /home/user/JAVA-ADVANCED-FRAMEWORKS/StrategyPatterns
-    - index index.html
+    - name: Instalanado o java
+      apt: name ={{ item }} state=present
+      with_items:
+        - openjdk-8-jdk -y
+        - openjdk-8-jre -y
+        - nginx
+        - clean all
+            
+    - name: Start nginx server
+      service:
+       - name: nginx
+       - state: start
+        
+    - name: Configure nginx
+      bar:
+       - server_name ansible
+       - listen 8089
+       - location / 
+       - root /home/user/JAVA-ADVANCED-FRAMEWORKS/StrategyPatterns
+       - index index.html
