--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,4 @@
----
-- host: 3.84.20.23
+- host: fiapServerAws
   remote_user: root
   
   task:
@@ -10,3 +9,17 @@
         - openjdk-8-jre -y
         - nginx
         - clean all
+            
+    - name: Start nginx server
+      service:
+       - name: nginx
+       - state: start
+        
+    - name: Configure nginx
+      bar:
+       - server_name ansible
+       - listen 8089
+       - location / 
+       - root /home/user/JAVA-ADVANCED-FRAMEWORKS/StrategyPatterns
+       - index index.html
+...
