--- a/playbook.yml
+++ b/playbook.yml
@@ -12,5 +12,7 @@
             
         - name: 'Start nginx server'
           service:
-           	- name: nginx
-            - state: start
+           	- name: 
+            	- nginx
+            - state: 
+            	- start
