--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,16 @@
+---
 - hosts: fiapServerAws
   remote_user: root
-        
   tasks:
-        - name: 'Instalanado o java'
-          apt: name ={{ item }} state=present
-          with_items:
+    - name: 'Instalanado o java'
+      apt: name ={{ item }} state=present
+      with_items:
             - openjdk-8-jdk -y
             - openjdk-8-jre -y
             - nginx
             - clean all
-            
-        - name: 'Start nginx server'
-          service:
-           	- name: nginx
-            - state: start
+    - name: 'Start nginx server'
+      service:
+        name: nginx
+        state: start
+...
