--- a/playbook.yml
+++ b/playbook.yml
@@ -13,4 +13,12 @@
       service:
         name: nginx
         state: start
+    
+    - name: 'Configure nginx'
+      bar:
+        - server_name ansible: ansible
+        - listen: 8089
+        - location: localhost /
+        - root: /home/user/JAVA-ADVANCED-FRAMEWORKS/StrategyPatterns
+        - index: index.html
 ...
