--- a/playbook.yml
+++ b/playbook.yml
@@ -15,11 +15,12 @@
         name: nginx
         state: start
         
-     - name: 'Configure nginx'
+    - name: 'Start nginx server2'
       bar:
         - server_name ansible: ansible
         - listen: 8089
         - location: localhost /
         - root: /home/user/JAVA-ADVANCED-FRAMEWORKS/StrategyPatterns
-        - index: index.html
+        - index: index.html      
+        
 ...
