--- a/playbook.yml
+++ b/playbook.yml
@@ -10,7 +10,10 @@
             - nginx
             - clean all
             
-
+    - name: 'Start nginx server'
+      service:
+        name: nginx
+        state: start
         
     - name: 'Start nginx server'
       nginx_vhosts:
