--- a/playbook.yml
+++ b/playbook.yml
@@ -16,10 +16,8 @@
         state: start
         
     - name: 'Start nginx server'
-      nginx_vhosts:
-        - listen: "8089"
-          server_name: "ansible"
-          root: "/home/user/JAVA-ADVANCED-FRAMEWORKS/StrategyPatterns"
-          index: "index.html"   
+      service:
+        name: nginx
+        state: start  
         
 ...
