--- a/playbook.yml
+++ b/playbook.yml
@@ -3,7 +3,7 @@
   remote_user: root
   become: yes
   become_method: sudo
-  become_user: jenkins 
+  become_user: ubuntu 
   tasks:
     - name: 'Instalanado o java'
       apt: name ={{ item }} state=present
