--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   remote_user: ubuntu
-  become: yes
+  become: false
   tasks:
     - name: Transfer file from ServerA to ServerB
       synchronize:
