--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: fiapServerAws
   remote_user: ubuntu
-  become: false
+  become: true
   tasks:
     - name: Transfer file from ServerA to ServerB
       synchronize:
