--- a/playbook.yml
+++ b/playbook.yml
@@ -4,7 +4,7 @@
   become: true
   tasks:
     - name: Transfer file from ServerA to ServerB
-      shell: cp /var/lib/jenkins/workspace/Demo/StrategyPatterns /home/ubuntu/
+      shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/Demo ubuntu@3.84.20.23:/ubuntu/
       recursive: yes
         
     - name: 'nginx'
