--- a/playbook.yml
+++ b/playbook.yml
@@ -3,8 +3,12 @@
   remote_user: ubuntu
   become: true
   tasks:
+  
+    - name: Zip project
+      shell: zip -r /var/lib/jenkins/workspace/StrategyPatterns
+      
     - name: Transfer file from ServerA to ServerB
-      shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns ubuntu@3.84.20.23:/ubuntu/
+      shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns.zip ubuntu@3.84.20.23:/ubuntu/
       recursive: yes
         
     - name: 'nginx'
