--- a/playbook.yml
+++ b/playbook.yml
@@ -3,12 +3,8 @@
   remote_user: ubuntu
   become: true
   tasks:
-  
-    - name: Zip project
-      shell: sudo tar -czvf java.tar.gz /var/lib/jenkins/workspace/Demo/StrategyPatterns
-      
     - name: Transfer file from ServerA to ServerB
-      shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns.zip ubuntu@3.84.20.23:/ubuntu/
+      shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns ubuntu@3.84.20.23:/ubuntu/
       recursive: yes
         
     - name: 'nginx'
