--- a/playbook.yml
+++ b/playbook.yml
@@ -1,20 +1,9 @@
 ---
-- hosts: fiapServerAws
+- hosts: localhost
   remote_user: ubuntu
   become: true
   tasks:
     - name: Transfer file from ServerA to ServerB
       shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns ubuntu@3.84.20.23:/ubuntu/
       recursive: yes
-        
-    - name: 'nginx'
-      apt: name ={{ item }} state=present
-      with_items:
-            - nginx state=latest
-            - clean all
-            
-    - name: 'Start nginx server'
-      service:
-        name: nginx
-        state: started
 ...
