--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   remote_user: ubuntu
-  become: false
+  become: true
   tasks:
     - name: Transfer file from ServerA to ServerB
       shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns ubuntu@3.84.20.23:/ubuntu/
