--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,7 @@
 - hosts: localhost
   remote_user: ubuntu
   become: true
+  sudo: yes
   tasks:
     - name: Transfer file from ServerA to ServerB
       shell: scp -r -p ubuntu@34.207.153.217:/var/lib/jenkins/workspace/StrategyPatterns ubuntu@3.84.20.23:/ubuntu/
